ADD PWA configuration example

--- a/src/index.html
+++ b/src/index.html
@@ -4,9 +4,26 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="apple-touch-icon" sizes="192x192" href="/src/assets/icon.png">
   <title>Petgram</title>
 </head>
 <body>
   <div id="app"></div>
+  <noscript>
+    <h3>Esta app necesita JavaScript para anunciar</h3>
+  </noscript>
+  <script>
+    if ('serviceWorker' in navigator) {
+      window.addEventListener('load', function(){
+        navigator.serviceWorker.register('/service-worker.js')
+          .then(registration => {
+            console.log('SW registrado')
+          })
+          .catch(registrationError => {
+            console.log('SW error')
+          })
+      })
+    }
+  </script>
 </body>
 </html>
