--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
   <script>
     if ('serviceWorker' in navigator) {
       window.addEventListener('load', function(){
-        navigator.serviceWorker.register('/service-worker.js')
+        navigator.serviceWorker.register('./service-worker.js')
           .then(registration => {
             console.log('SW registrado')
           })
